Add live chat scroll style

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background:  #80808023;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #80808071;
+    border-radius: 100vh;
+    border: 2px solid #e3e3e3;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background:  rgba(90, 90, 90, 0.836);
+  }
+}
